--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
 install:
   - pip install coveralls
   - pip install git+https://github.com/librosa/librosa.git
+  - pip install git+https://github.com/marl/medleydb.git
   - pip install -e .
   - pip install mock
 
