--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: python
 cache:
   directories:
   - $HOME/env
+  - $HOME/data
 
 notifications:
   email: false
@@ -19,7 +20,11 @@ addons:
     packages:
     - sox
 
+env:
+  - MEDLEYDB_PATH=$HOME/data/MedleyDB_sample
+
 before_install:
+    - bash .travis_download_mdb.sh
     - bash .travis_dependencies.sh
     - export PATH="$HOME/env/miniconda$TRAVIS_PYTHON_VERSION/bin:$PATH";
     - hash -r
