--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,13 @@ addons:
     - sox
 
 env:
-  - MEDLEYDB_PATH=$HOME/data/MedleyDB_sample
+  - MEDLEYDB_PATH=$HOME/data/MedleyDB_sample VAMP_PATH=$HOME/data/vamp VAMPY_EXTPATH=$VAMP_PATH
 
 before_install:
     - bash .travis_download_mdb.sh
     - bash .travis_dependencies.sh
+    - mkdir -p $VAMP_PATH
+    - cp massage/resources/* ${VAMP_PATH}/
     - export PATH="$HOME/env/miniconda$TRAVIS_PYTHON_VERSION/bin:$PATH";
     - hash -r
     - source activate test-environment
