added usabel sf2 and associated mfcc_npz files for acoustic guitar. Finished porting and started writing tests.
deleted large sf, and adjusted mfcc accordingly

fixed .travis.yml and moved pyin files to a senseable place

fixed setup to include pretty_midi

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
@@ -90,6 +88,6 @@ ENV/
 .ropeproject
 
 # Tom's special
-/massage/resources/sf2/
 /.idea/
 *.ipynb
+massage/resources/sonify/
