--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
     - bash .travis_download_mdb.sh
     - bash .travis_dependencies.sh
     - mkdir -p $VAMP_PATH
-    - cp massage/resources/* ${VAMP_PATH}/
+    - cp massage/resources/pyin/* ${VAMP_PATH}/
     - export PATH="$HOME/env/miniconda$TRAVIS_PYTHON_VERSION/bin:$PATH";
     - hash -r
     - source activate test-environment
