end of day 8/9 updated setup.py refactored, created util and test_util. Created empty tests for all util.py and guitar_strummer.py.
minor fixes

finished unit tests and doc strings

minor fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
   apt:
     packages:
     - sox
+    - fluidsynth
 
 env:
   - MEDLEYDB_PATH=$HOME/data/MedleyDB_sample VAMP_PATH=$HOME/data/vamp VAMPY_EXTPATH=$VAMP_PATH
