--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ addons:
   apt:
     packages:
     - sox
-    - fluidsynth
 
 env:
   - MEDLEYDB_PATH=$HOME/data/MedleyDB_sample VAMP_PATH=$HOME/data/vamp VAMPY_EXTPATH=$VAMP_PATH
@@ -39,6 +38,8 @@ install:
   - pip install git+https://github.com/librosa/librosa.git
   - pip install git+https://github.com/marl/medleydb.git
   - pip install -e .
+  # uninstall needed for mocking to work in unittests with python 3.
+  - pip uninstall --yes pyfluidsynth
   - pip install mock
 
 # command to run tests
