--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
 # command to install dependencies
 install:
   - pip install coveralls
-  - pip install git+https://github.com/librosa/librosa.git
+  - conda install -c conda-forge librosa
   - pip install git+https://github.com/marl/medleydb.git
   - pip install -e .
   # uninstall needed for mocking to work in unittests with python 3.
